src/test/ui/parser/raw/raw-str-unbalanced.stderr
error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:3:9
   |
LL |       "##
   |         ^ help: Remove the extra `#`
   |
   = note: The raw string started with 1 `#`s

error: aborting due to previous error

